# SCC_helical

./: .gitignore  README.md  pyproject.toml  slide_deck.pptx
scc_helical/: functions.py  load_datasets.ipynb  task1_insilico_perturbation.ipynb  task2_perturbations_scc.ipynb  task32_embedding_interpretation.ipynb  task3_embedding_interpretation.ipynb  ~$slide_deck.pptx
